Add API for requesting all initiatives.
